Added SpringArm Cam and tweaked movement to feel better

--- a/SeaAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SeaAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=160)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -123,6 +123,7 @@ LastExecutedLaunchName=DESKTOP-F249QG0
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=320,Y=160)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -159,7 +160,7 @@ MRUItem1=/Game/Map/Main
 LastLevel=/Game/Map/MovementTest
 
 [ModuleFileTracking]
-SeaAdventure.TimeStamp=2023.05.03-03.03.03
+SeaAdventure.TimeStamp=2023.05.05-00.12.14
 SeaAdventure.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.02.10-04.42.21
 StorageServerClient.LastCompileMethod=Unknown
@@ -1175,7 +1176,7 @@ PinnedCommandList.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Mappings.Mappings.Mappings[2]\" "
+Object="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 GeneralProjectSettings="\"Object\" "
@@ -1360,12 +1361,12 @@ SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
+SpringArmComponent="\"Object\" "
+CameraComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/FishCharacter_BP.FishCharacter_BP
-OpenAssetsAtExit=/Game/Input/IA_Jump.IA_Jump
-OpenAssetsAtExit=/Game/Input/IMC_Fish.IMC_Fish
 
 [DetailCategories]
 Landscape.TransformCommon=True
@@ -2038,7 +2039,7 @@ DataValidationSettings.Validation Scenarios=True
 GameplayDebuggerUserSettings.GameplayDebugger=True
 GameplayTagsDeveloperSettings.GameplayTags=True
 LogVisualizerSettings.VisualLogger=True
-FishCharacter_BP_C.TransformCommon=True
+FishCharacter_BP_C.TransformCommon=False
 FishCharacter_BP_C.Animation=True
 FishCharacter_BP_C.Mesh=True
 FishCharacter_BP_C.Tick=True
@@ -2188,6 +2189,39 @@ SkeletalMeshComponent.Variable=True
 SkeletalMeshComponent.SkeletalMesh=True
 SkeletalMeshComponent.Optimization=True
 SkeletalMeshComponent.AssetUserData=True
+FishCharacter_BP_C.CameraSettings=True
+FishCharacter_BP_C.CameraOptions=True
+FishCharacter_BP_C.CameraCollision=True
+FishCharacter_BP_C.Lag=True
+FishCharacter_BP_C.LOD=True
+FishCharacter_BP_C.PostProcess=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.ComponentTick=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -2226,7 +2260,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/SeaAdventure
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2250,7 +2284,7 @@ PerWorldEditorSettings=(("/Game/Map/Main.Main", (LoadedEditorRegions=((Min=(X=-1
 [RootWindow]
 ScreenPosition=X=19.000 Y=147.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2291,9 +2325,9 @@ EditorStyleSettings=True
 LiveCodingSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Input/IMC_Fish
-MRUItem1=/Game/Input/IA_Jump
-MRUItem2=/Game/Blueprints/FishCharacter_BP
+MRUItem0=/Game/Blueprints/FishCharacter_BP
+MRUItem1=/Game/Input/IMC_Fish
+MRUItem2=/Game/Input/IA_Jump
 MRUItem3=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
 MRUItem4=/Game/Input/IA_Move
 MRUItem5=/Game/Input/IMC_Player
@@ -2302,6 +2336,7 @@ MRUItem7=/Game/FishCharacter_BP
 MRUItem8=/Game/Map/MovementTest
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2410,6 +2445,8 @@ bPreloadProjectPluginModules=True
 GameMapsSettings.DefaultModes=True
 GameMapsSettings.DefaultMaps=False
 FishCharacter_BP_C.Tick=False
+FishCharacter_BP_C.Physics=False
+FishCharacter_BP_C.AssetUserData=False
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
