--- a/SeaAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SeaAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1341,8 +1341,8 @@ GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 Actor="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" "
@@ -1371,10 +1371,12 @@ Bullet="\"Object.Input.Mesh.Object.Rendering\" \"Object.Input.Mesh.Object.Lighti
 SphereComponent="\"Object\" "
 CharacterAbilites_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" "
 CharacterAbilites="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" "
-StaticMeshComponent="\"Object\" "
+StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/FishCharacter_BP.FishCharacter_BP
+OpenAssetsAtExit=/Game/Blueprints/Bullet_BP.Bullet_BP
 
 [DetailCategories]
 Landscape.TransformCommon=True
@@ -2384,7 +2386,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Classes_Game/SeaAdventure
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2472,8 +2474,8 @@ LiveCodingSettings=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Bullet_BP
-MRUItem1=/Game/Blueprints/Garbage_BP
-MRUItem2=/Game/Blueprints/FishCharacter_BP
+MRUItem1=/Game/Blueprints/FishCharacter_BP
+MRUItem2=/Game/Blueprints/Garbage_BP
 MRUItem3=/Game/Blueprints/CharacterAbilites
 MRUItem4=/Game/Input/InputMapping
 MRUItem5=/Game/Input/IMC_Fish
@@ -2584,12 +2586,13 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Input/Shoot_Action.Shoot_Action,
-FishCharacter_BP_C=FishCharacter_BP_C.PostProcess.Lens,FishCharacter_BP_C.PostProcess.Lens
-SpringArmComponent=FishCharacter_BP_C.PostProcess.Lens,FishCharacter_BP_C.PostProcess.Lens
+FishCharacter_BP_C=FishCharacter_BP_C.PostProcess.Lens,
+SpringArmComponent=FishCharacter_BP_C.PostProcess.Lens,
 SceneComponent=FishCharacter_BP_C.PostProcess.Lens,FishCharacter_BP_C.PostProcess.Lens
 CapsuleComponent=FishCharacter_BP_C.PostProcess.Lens,FishCharacter_BP_C.PostProcess.Lens
 SphereComponent=SphereComponent.Collision.Collision,
-Bullet_BP_C=FishCharacter_BP_C.PostProcess.Lens,FishCharacter_BP_C.PostProcess.Lens
+Bullet_BP_C=FishCharacter_BP_C.PostProcess.Lens,
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 
 [/Script/LiveCoding.LiveCodingSettings]
 bEnabled=False
