--- a/SeaAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SeaAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1342,7 +1342,7 @@ LogVisualizerSettings="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+PrimitiveComponent="\"Object\" "
 Actor="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" "
@@ -1375,8 +1375,6 @@ StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionRespons
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/FishCharacter_BP.FishCharacter_BP
-OpenAssetsAtExit=/Game/Blueprints/Bullet_BP.Bullet_BP
 
 [DetailCategories]
 Landscape.TransformCommon=True
@@ -2590,9 +2588,10 @@ FishCharacter_BP_C=FishCharacter_BP_C.PostProcess.Lens,
 SpringArmComponent=FishCharacter_BP_C.PostProcess.Lens,
 SceneComponent=FishCharacter_BP_C.PostProcess.Lens,FishCharacter_BP_C.PostProcess.Lens
 CapsuleComponent=FishCharacter_BP_C.PostProcess.Lens,FishCharacter_BP_C.PostProcess.Lens
-SphereComponent=SphereComponent.Collision.Collision,
+SphereComponent=
 Bullet_BP_C=FishCharacter_BP_C.PostProcess.Lens,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+Garbage_BP_C=SphereComponent.Collision.Collision,
 
 [/Script/LiveCoding.LiveCodingSettings]
 bEnabled=False
