Added Interaction UI

--- a/SeaAdventure/Config/DefaultEngine.ini
+++ b/SeaAdventure/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Map/MovementTest.MovementTest
 EditorStartupMap=/Game/Map/MovementTest.MovementTest
-GlobalDefaultGameMode=/Game/NewGameMode.NewGameMode_C
+GlobalDefaultGameMode=/Engine/ArtTools/RenderToTexture/Blueprints/RenderToTexture_Game.RenderToTexture_Game_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
