--- a/SeaAdventure/Config/DefaultGame.ini
+++ b/SeaAdventure/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=5B8095F944C5E850D5C29882A1473F29
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_DebugGame
+
