--- a/SeaAdventure/Config/DefaultEngine.ini
+++ b/SeaAdventure/Config/DefaultEngine.ini
@@ -260,3 +260,7 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/NavigationSystem.RecastNavMesh]
+bDrawPolyEdges=True
+CellSize=5.000000
+
