Added Long Range Enemy Assets

--- a/SeaAdventure/Config/DefaultEngine.ini
+++ b/SeaAdventure/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/MovementTest.MovementTest
-EditorStartupMap=/Game/Map/MovementTest.MovementTest
+GameDefaultMap=/Game/Map/Levelpart1.Levelpart1
+EditorStartupMap=/Game/Map/Levelpart1.Levelpart1
 GlobalDefaultGameMode=/Engine/ArtTools/RenderToTexture/Blueprints/RenderToTexture_Game.RenderToTexture_Game_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
