--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ Plugins/*/Intermediate/
 
 # Cache files for the editor to use
 DerivedDataCache/
+SeaAdventure/Content/Assets/Kraken/Textures/Tex_KRAKEN_BODY_RoughnessMetallicSpecular.uasset
