Level Changes and some other stuff

--- a/SeaAdventure/Config/DefaultEngine.ini
+++ b/SeaAdventure/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/Levelpart1.Levelpart1
+GameDefaultMap=/Game/Map/Main_Menu.Main_Menu
 EditorStartupMap=/Game/Map/Levelpart1.Levelpart1
 GlobalDefaultGameMode=/Engine/ArtTools/RenderToTexture/Blueprints/RenderToTexture_Game.RenderToTexture_Game_C
 
